feat: varios componentes, pipe, services and utils

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<app-todo-list [todolist]="todos"/>
+<div class="container">
+  <h1>App de Tareas</h1>
+
+  <app-todo-form />
+
+  <div class="filters">
+    <h2>Filtros</h2>
+    <app-todo-filters />
+    <app-todo-orders />
+  </div>
+
+  <app-todo-list class="todo-list" [todolist]="todos"/>
+</div>
