--- a/src/app/components/todo-list-item/todo-list-item.component.css
+++ b/src/app/components/todo-list-item/todo-list-item.component.css
@@ -1,4 +1,5 @@
 .todo {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
@@ -35,16 +36,15 @@
         transform: scale(1.2);
       }
     }
+  }
 
-    .botton {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+  .botton {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-      span {
-        font-size: 14px;
-        font-weight: 600;
-      }
+    span {
+      font-size: 14px;
     }
   }
 }
